# survey-parser

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  claude_client.py  deepseek_client.py  gemini_client.py  llm_whisperer.py  mistral_client.py  openrouter_client.py  together_client.py
config/: __init__.py  settings.py
core/: __init__.py  file_operations.py  pdf_utils.py  resource_manager.py  text_utils.py
models/: __init__.py  enums.py
output/: batch_summary.json  temp_mutation.json  temp_structured_results.json
output/ocr/: singeplage.txt
output/prompts/: singeplage.txt
processors/: __init__.py  batch_processor.py  single_processor.py
services/: __init__.py  extraction_service.py  ocr_service.py  provider_service.py
