[tool.poetry]
name = "survey-parser"
version = "0.1.0"
description = "API for parsing surveys from various formats"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
PyPDF2 = "^3.0.0"
python-docx = ">=1.1.2"
pytesseract = "^0.3.10"
Pillow = "^11.1.0"
llama-cpp-python = "^0.2.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
pydantic = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
langchain = "^0.3.23"
langchain-core = "^0.3.51"
huggingface = "^0.0.1"
huggingface-hub = "^0.30.2"
unstructured = {extras = ["all-docs"], version = "^0.17.2"}
rich = "^13.7.0"
langchain-openai = "0.3.1"
browser-use = "^0.1.40"
pikepdf = "^9.7.0"
llmwhisperer-client = "^2.3.0"
aiohttp = "^3.11.16"
mistralai = "^1.6.0"
together = "^1.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipykernel = "^6.29.5"

[tool.poetry.scripts]
survey-parser = "src.api:main"
survey-pipeline = "src.survey_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 